removed boxes from resonance

--- a/resonance/circle.html
+++ b/resonance/circle.html
@@ -72,6 +72,11 @@
 				order = 1;
 			}
 
+			let pitch = getParameterByName('Pitch');
+			if (pitch == null) {
+				pitch = "0";
+			}
+
 			init();
 			animate();
 
@@ -141,58 +146,7 @@
 				for (var i = 1; i <= numObjects; i++) {
 
 					 var angle = (theta * i);
-					 if (material === "wood") {
-
- 						var box = new THREE.BoxGeometry(boxSize, boxSize, boxSize);
- 						var sphere = new THREE.SphereGeometry(boxSize/8, boxSize/8, boxSize/8);
-
- 						var object = new THREE.Mesh( box, new THREE.MeshLambertMaterial( { color: "#966F33"} ) );
- 						object.position.x =  X / 2 + (radius * Math.cos(angle));
- 						object.position.y = boxSize/2;
- 						object.position.z = Z / 2 + (radius * Math.sin(angle));
- 						object.castShadow = true;
- 						object.receiveShadow = true;
- 						scene.add( object );
- 						objects.push( object );
-
- 	          object2 = new THREE.Mesh( sphere, new THREE.MeshLambertMaterial( { color: "white"} ) );
- 						object2.position.x = object.position.x;
- 						object2.position.y = object.position.y + (boxSize * 5 / 8) ;
- 						object2.position.z = object.position.z;
- 						object2.castShadow = true;
- 						object2.receiveShadow = true;
- 						scene.add( object2 );
- 						objects.push( object2 );
-
-						// ADD SOUND
-						var source = audioScene.createSource();
-						source.setPosition(object.position.x, object.position.y, object.position.z);
-
-						// Connect audio graph.
-						audioScene.output.connect(gain);
-						gain.connect(audioContext.destination);
-
-						let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + '.mp3';
-						let audioElement = document.createElement('audio');
-						audioElement.src = audioSource;
-						audioElement.crossOrigin = "anonymous";
-						audioElement.playbackRate.value = .5
-						audioElement.load();
-						audioElement.onended = function(){
-							this.currentTime = 0;
-							var delay = setTimeout(function(){
-								audioElement.play();
-								clearTimeout(delay);
-								console.log("playing")
-							}, Math.random() * 100);
-						}
-
-						audioElementSource = audioContext.createMediaElementSource(audioElement);
-						audioElementSource.connect(source.input);
-
-						audioElement.play();
- 					}
- 					else if (material === "metal") {
+					 if (material === "metal") {
 
  						var rod = new THREE.CylinderGeometry(1, 1, boxSize, 32);
 						var base = new THREE.CylinderGeometry(3, 3, boxSize/20, 32);
@@ -224,7 +178,7 @@
 						audioScene.output.connect(gain);
 						gain.connect(audioContext.destination);
 
-						let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + '.mp3';
+						let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + "_" + pitch + '.wav';
 						let audioElement = document.createElement('audio');
 						audioElement.src = audioSource;
 						audioElement.crossOrigin = "anonymous";
