--- a/resonance/spiral.html
+++ b/resonance/spiral.html
@@ -115,15 +115,6 @@
 
 				// Create <audio> streaming audio source.
 				var audioContext = new AudioContext();
-				var analyser = audioContext.createAnalyser();
-      	var delay = audioContext.createDelay();
-      	delay.delayTime.value = 4;
-
-      	jungle = new Jungle(audioContext);
-      	jungle.setPitchOffset(2);
-      	delay.connect(jungle.input);
-      	jungle.output.connect(audioContext.destination);
-      	jungle.output.connect(analyser);
 
 				// Create gain nodes.
 				var gain = audioContext.createGain();
@@ -158,58 +149,7 @@
 				var path = getSpiral({x: 0, y:0 }, {x:10, y:10}, radius)
 
 				for (var i = 0; i < path.length; i += 10) {
-					 if (material === "wood") {
-
- 						var box = new THREE.BoxGeometry(boxSize, boxSize, boxSize);
- 						var sphere = new THREE.SphereGeometry(boxSize/8, boxSize/8, boxSize/8);
-
- 						var object = new THREE.Mesh( box, new THREE.MeshLambertMaterial( { color: "#966F33"} ) );
- 						object.position.x =  path[i].x + X/2
- 						object.position.y = boxSize/2;
- 						object.position.z = path[i].y + Z/2
- 						object.castShadow = true;
- 						object.receiveShadow = true;
- 						scene.add( object );
- 						objects.push( object );
-
- 	          object2 = new THREE.Mesh( sphere, new THREE.MeshLambertMaterial( { color: "white"} ) );
- 						object2.position.x = object.position.x;
- 						object2.position.y = object.position.y + (boxSize * 5 / 8) ;
- 						object2.position.z = object.position.z;
- 						object2.castShadow = true;
- 						object2.receiveShadow = true;
- 						scene.add( object2 );
- 						objects.push( object2 );
-
-						// ADD SOUND
-						var source = audioScene.createSource();
-						source.setPosition(object2.position.x, object2.position.y, object2.position.z);
-
-						// Connect audio graph.
-						audioScene.output.connect(gain);
-						gain.connect(audioContext.destination);
-
-						let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + '.mp3';
-						let audioElement = document.createElement('audio');
-						audioElement.src = audioSource;
-						audioElement.crossOrigin = "anonymous";
-						audioElement.load();
-						audioElement.onended = function(){
-							this.currentTime = 0;
-							var delay = setTimeout(function(){
-								audioElement.play();
-								clearTimeout(delay);
-								console.log("playing")
-							}, Math.random() * 100);
-						}
-
-						audioElementSource = audioContext.createMediaElementSource(audioElement);
-						audioElementSource.connect(source.input);
-
-						audioElement.play();
-
- 					}
- 					else if (material === "metal") {
+					 if (material === "metal") {
 
  						var rod = new THREE.CylinderGeometry(1, 1, boxSize, 32);
 						var base = new THREE.CylinderGeometry(3, 3, boxSize/20, 32);
