--- a/resonance/cluster.html
+++ b/resonance/cluster.html
@@ -67,6 +67,11 @@
 				order = 1;
 			}
 
+			let pitch = getParameterByName('Pitch');
+			if (pitch == null) {
+				pitch = "0";
+			}
+
 			let material = getParameterByName('Material');
 			if (material == null || material == "wood") {
 				material = "wood";
@@ -148,57 +153,7 @@
 					let clusterCoord = [Math.random() * (X - 5 * xSize), ySize/2, Math.random() * (Z - 5 * zSize)]
 					for ( var j = 0; j < clusterSize; j ++ ) {
 
-						if (material === "wood") {
-
-							var box = new THREE.BoxGeometry(boxSize, boxSize, boxSize);
-							var sphere = new THREE.SphereGeometry(boxSize/8, boxSize/8, boxSize/8);
-
-							var object = new THREE.Mesh( box, new THREE.MeshLambertMaterial( { color: "#966F33"} ) );
-							object.position.x = clusterCoord[0] + Math.random() * 5 * boxSize ;
-							object.position.y = clusterCoord[1];
-							object.position.z = clusterCoord[2] + Math.random() * 5 * boxSize ;
-							object.castShadow = true;
-							object.receiveShadow = true;
-							scene.add( object );
-							objects.push( object );
-
-		          object2 = new THREE.Mesh( sphere, new THREE.MeshLambertMaterial( { color: "white"} ) );
-							object2.position.x = object.position.x;
-							object2.position.y = object.position.y + (boxSize * 5 / 8) ;
-							object2.position.z = object.position.z;
-							object2.castShadow = true;
-							object2.receiveShadow = true;
-							scene.add( object2 );
-							objects.push( object2 );
-
-							var source = audioScene.createSource();
-							source.setPosition(object2.position.x, object2.position.y, object2.position.z);
-
-							// Connect audio graph.
-							audioScene.output.connect(gain);
-							gain.connect(audioContext.destination);
-
-							let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + '.mp3';
-							let audioElement = document.createElement('audio');
-							audioElement.src = audioSource;
-							audioElement.crossOrigin = "anonymous";
-							audioElement.load();
-							audioElement.onended = function(){
-								this.currentTime = 0;
-								var delay = setTimeout(function(){
-									audioElement.play();
-									clearTimeout(delay);
-									console.log("playing")
-								}, Math.random() * 100);
-							}
-
-							audioElementSource = audioContext.createMediaElementSource(audioElement);
-							audioElementSource.connect(source.input);
-
-							audioElement.play();
-
-						}
-						else if (material === "metal") {
+						if (material === "metal") {
 							var rod = new THREE.CylinderGeometry(1, 1, boxSize, 32);
 							var base = new THREE.CylinderGeometry(3, 3, boxSize/20, 32);
 
@@ -227,7 +182,7 @@
 							audioScene.output.connect(gain);
 							gain.connect(audioContext.destination);
 
-							let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + '.mp3';
+							let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + "_" + pitch + '.wav';
 							let audioElement = document.createElement('audio');
 							audioElement.src = audioSource;
 							audioElement.crossOrigin = "anonymous";
