--- a/resonance/random.html
+++ b/resonance/random.html
@@ -13,6 +13,8 @@
 			}
 		</style>
 	</head>
+	<div id="audio">
+	</div>
 	<body>
 
 		<script src="https://cdn.jsdelivr.net/npm/resonance-audio/build/resonance-audio.min.js"></script>
@@ -66,6 +68,16 @@
 			let pitch = getParameterByName('Pitch');
 			if (pitch == null) {
 				pitch = "0";
+			}
+
+			let offsetType = getParameterByName('OffsetType');
+			if (offsetType == null) {
+				offsetType = "uniform";
+			}
+
+			let offset = parseInt(getParameterByName('Offset'));
+			if (offset == null) {
+				offset = 100;
 			}
 
 			let boxSize = 50 + parseInt(pitch) * 7.5;
@@ -132,6 +144,7 @@
 				  // Room ceiling
 				  up: 'PlasterSmooth',
 				};
+				var offsets = new Array(numBoxes)
 
 				audioScene.setRoomProperties(roomDimensions, roomMaterials);
 
@@ -169,18 +182,27 @@
 						gain.connect(audioContext.destination);
 
 						let audioSource = 'https://emmaoberstein.github.io/music34/media/' + material + "_" + pitch + '.wav';
-						let audioElement = document.createElement('audio');
+						var audioElement = document.createElement('audio');
 						audioElement.src = audioSource;
 						audioElement.crossOrigin = "anonymous";
+						audioElement.id = i.toString()
 						audioElement.load();
-						audioElement.onended = function(){
-							this.currentTime = 0;
-							var delay = setTimeout(function(){
-								audioElement.play();
-								clearTimeout(delay);
-								console.log("playing")
-							}, Math.random() * 100);
+
+						document.getElementById("audio").appendChild(audioElement)
+
+						if (offsetType == "uniform") {
+							offsets[i] = i * offset
+						}	else {
+							offsets[i] = Math.random() * offset
 						}
+						
+						document.getElementById(i.toString()).addEventListener("ended", function() {
+        			var id = this.id
+							var delay = setTimeout(function(){
+								document.getElementById(id).play();
+								clearTimeout(delay);
+							}, offsets[id]);
+    				});
 
 						audioElementSource = audioContext.createMediaElementSource(audioElement);
 						audioElementSource.connect(source.input);
