--- a/resonance/circle.html
+++ b/resonance/circle.html
@@ -70,7 +70,7 @@
 			}
 
 			let pitch = getParameterByName('Pitch');
-			if (pitch == null) {
+			if (pitch == null || parseInt(pitch) > 5 || parseInt(pitch) < -5) {
 				pitch = "0";
 			}
 
@@ -202,7 +202,7 @@
 						}	else {
 							offsets[i] = Math.random() * offset
 						}
-						
+
 						document.getElementById(i.toString()).addEventListener("ended", function() {
         			var id = this.id
 							var delay = setTimeout(function(){
