--- a/resonance/random.html
+++ b/resonance/random.html
@@ -66,7 +66,7 @@
 			}
 
 			let pitch = getParameterByName('Pitch');
-			if (pitch == null) {
+			if (pitch == null || parseInt(pitch) > 5 || parseInt(pitch) < -5) {
 				pitch = "0";
 			}
 
@@ -195,7 +195,7 @@
 						}	else {
 							offsets[i] = Math.random() * offset
 						}
-						
+
 						document.getElementById(i.toString()).addEventListener("ended", function() {
         			var id = this.id
 							var delay = setTimeout(function(){
